# niryo_controller

niryo_control/: CMakeLists.txt  package.xml
niryo_control/action/: JointPostureCtrl.action  SE3Ctrl.action  control.action  q_ctrl.action  target.action
niryo_control/include/niryo_control/: control.hpp  test.hpp
niryo_control/launch/: test.launch
niryo_control/src/: control_node.cpp
niryo_moveit/: .setup_assistant  package.xml
niryo_moveit/config/: gazebo_niryo_one.urdf  kinematics.yaml  niryo_one.srdf
niryo_moveit/launch/: moveit.rviz  ros_controllers.launch
niryo_one_moveit/: .setup_assistant  CMakeLists.txt  package.xml
niryo_one_moveit/config/: fake_controllers.yaml  niryo_one.srdf  ros_controllers.yaml
niryo_one_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
rci_qp_controller/: CMakeLists.txt  package.xml
rci_qp_controller/include/rci_qp_controller/formulation/: inverse_dynamics_formulation_acc.hpp  inverse_dynamics_formulation_base.hpp
rci_qp_controller/include/rci_qp_controller/math/: constraint_base.hpp  constraint_bound.hpp  constraint_equality.hpp  constraint_inequality.hpp  fwd.hpp  util.hpp
rci_qp_controller/include/rci_qp_controller/robot/: fwd.hpp  robot_wrapper.hpp
rci_qp_controller/include/rci_qp_controller/solver/: fwd.hpp  solver_HQP_base.hpp  solver_HQP_eiquadprog.hpp  solver_HQP_eiquadprog_fast.hpp  solver_HQP_eiquadprog_rt.hpp  solver_HQP_eiquadprog_rt.hxx  solver_HQP_factory.hpp  solver_HQP_factory.hxx  solver_HQP_output.hpp  util.hpp
rci_qp_controller/include/rci_qp_controller/tasks/: fwd.hpp  task_base.hpp  task_joint_bound.hpp  task_joint_posture.hpp  task_motion.hpp  task_se3_equality.hpp
rci_qp_controller/include/rci_qp_controller/trajectory/: trajectory_base.hpp  trajectory_euclidian.hpp  trajectory_se3.hpp
rci_qp_controller/include/rci_qp_controller/util/: stop_watch.hpp
rci_qp_controller/src/formulation/: inverse_dynamics_formulation_acc.cpp  inverse_dynamics_formulation_base.cpp
rci_qp_controller/src/math/: constraint_base.cpp  constraint_bound.cpp  constraint_equality.cpp  constraint_inequality.cpp  util.cpp
rci_qp_controller/src/robot/: robot_wrapper.cpp
rci_qp_controller/src/solver/: solver_HQP_base.cpp  solver_HQP_eiquadprog.cpp  solver_HQP_eiquadprog_fast.cpp  solver_HQP_factory.cpp
rci_qp_controller/src/tasks/: task_base.cpp  task_joint_bound.cpp  task_joint_posture.cpp  task_motion.cpp  task_se3_equality.cpp
rci_qp_controller/src/trajectory/: trajectory_euclidian.cpp  trajectory_se3.cpp
rci_qp_controller/src/util/: statistics.cpp  stop_watch.cpp
rci_qp_controller/unittest/: constraint.cpp  math.cpp  robot-wrapper.cpp  task.cpp  trajectory.cpp
rci_qp_controller/unittest/launch/: constraint.launch  math.launch  robot_wrapper.launch  task.launch  trajectory.launch
