<?xml version="1.0"?>
<package format="2">
  <name>niryo_control</name>
  <version>0.0.1</version>
  <description>The ur_control package</description>

  <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>pinocchio</depend>
  <depend>rci_qp_controller</depend>
  <depend>tf_conversions</depend>
 
  <exec_depend>ur_description</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/kimm_husky_controllers_plugin.xml"/>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
